--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -90,9 +90,9 @@
 <table id="banner" width="100%">
     <tr>
       <td align="left" style="width:130px">
-      <a href="http://tomcat.apache.org/">
-        <img src="tomcat.gif" height="92" width="130" alt="The Mighty Tomcat - MEOW!"/>
-      </a>
+        <a href="http://tomcat.apache.org/">
+          <img src="tomcat.gif" height="92" width="130" alt="The Mighty Tomcat - MEOW!"/>
+        </a>
       </td>
       <td align="left" valign="top"><b>Apache Tomcat</b></td>
       <td align="right">
@@ -130,7 +130,7 @@
                   <td class="menu">
                     <a href="RELEASE-NOTES.txt">Release&nbsp;Notes</a><br/>
                     <a href="/docs/changelog.html">Change&nbsp;Log</a><br/>
-                    <a href="/docs">Tomcat&nbsp;Documentation</a><br/>                        &nbsp;
+                    <a href="/docs">Tomcat&nbsp;Documentation</a><br/>
                     &nbsp;
 		    </td>
                 </tr>
