Align ROOT/index.html and ROOT/index.jsp It is backport of r1560857 and followup to r648575 that fixed one of the two files.
The following fixes were part of r648575:
- Fix broken links if ROOT application is renamed.
- Merge "Examples" section of menu into "Miscellaneous" one.

The following fixes are new:
- Remove dead links to Sun sites.
- Add link to the Specifications page of Tomcat Wiki.
- Correct mailing lists links so that they point to the Mailing List
page on the site, so that people have a chance to read instructions there.

git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1561027 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -160,8 +160,7 @@
                   <td class="menu">
                     <a href="/examples/servlets/">Servlets Examples</a><br/>
                     <a href="/examples/jsp/">JSP Examples</a><br/>
-                    <a href="http://java.sun.com/products/jsp">Sun's&nbsp;Java&nbsp;Server&nbsp;Pages&nbsp;Site</a><br/>
-                    <a href="http://java.sun.com/products/servlet">Sun's&nbsp;Servlet&nbsp;Site</a><br/>
+                    <a href="http://wiki.apache.org/tomcat/Specifications">Specifications</a><br/>
                         &nbsp;
                   </td>
                 </tr>
@@ -188,8 +187,8 @@
             <p>Tomcat mailing lists are available at the Tomcat project web site:</p>
 
            <ul>
-               <li><b><a href="mailto:users@tomcat.apache.org">users@tomcat.apache.org</a></b> for general questions related to configuring and using Tomcat</li>
-               <li><b><a href="mailto:dev@tomcat.apache.org">dev@tomcat.apache.org</a></b> for developers working on Tomcat</li>
+               <li><b><a href="http://tomcat.apache.org/lists.html#tomcat-users">tomcat-users</a></b> for general questions related to configuring and using Tomcat</li>
+               <li><b><a href="http://tomcat.apache.org/lists.html#tomcat-dev">tomcat-dev</a></b> for developers working on Tomcat</li>
            </ul>
 
             <p>Thanks for using Tomcat!</p>
